--- a/porfolio_Pierini/src/index.html
+++ b/porfolio_Pierini/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PorfolioPierini</title>
+  <title>Portafolio-Pierini</title>
   <base href="/">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
